frontend/kustomize/overlays/dev/base/common-app/templates/service.yaml
---
# Source: common-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
